--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   <!-- Pricing -->
   <section class="white-section" id="pricing">
     <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your and your dog.</p>
+    <p>Simple and affordable price plans for you and your dog.</p>
     <div class="row">
 
       <div class="pricing-column col-lg-4 col-md-6">
@@ -176,7 +176,7 @@
           </div>
           <div class="card-body">
             <h2 class="price-text">$99 / mo</h2>
-            <p>Pirority Listing</p>
+            <p>Priority Listing</p>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
             <p>Unlimited App Usage</p>
